--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
-    "start-js": "react-scripts start",
+    "start-js": "NODE_PATH=src:src/components react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
-    "build-js": "react-scripts build",
+    "build-js": "NODE_PATH=src:src/components react-scripts build",
     "build": "npm-run-all build-css build-js",
-    "test": "react-scripts test --env=jsdom",
+    "test": "NODE_PATH=src:src/components react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
 }
